[workspace]
members = ["server", "domain", "infrastructure"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
futures-util = "0.3.21"
log = "0.4.15"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
