[workspace]
members = ["server", "domain", "application", "infrastructure"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
assert_matches = "1.5.0"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
mockall = "0.11.4"
pretty_assertions = "1.2.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
