[workspace]
members = ["server", "domain", "application", "infrastructure"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
assert_matches = "1.5.0"
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
mockall = "0.12.1"
pretty_assertions = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
