[package]
name = "domain"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.40"
chrono = { version = "^0.4.19", features = ["serde"] }
async-trait = "^0.1.42"
serde = { version = "^1", features = ["derive"] }
url = { version = "^2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "^0.7.2"
