[package]
name = "domain"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.52"
serde = { version = "1.0.136", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
jsonwebtoken = "8.0.1"
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.1.0"
