[package]
name = "domain"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "9.1.0"
serde = { workspace = true }
thiserror = { workspace = true }
url ={ workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
