[package]
name = "infrastructure"
version = "0.0.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
elasticsearch = "7.14.0-alpha.1"
env_logger = "0.11.3"
log = { workspace = true }
r2d2 = "0.8.9"
reqwest = { version = "0.11.26", features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = "1.0.114"
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
