[package]
name = "server"
version = "11.1.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"
default-run = "server"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
url = "2.2.2"
tokio = { version = "1.17.0", features = ["full"] }
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-cors = "0.6.1"
askama = { version = "0.11.1", features = ["mime", "mime_guess"] }
askama_escape = "0.10.3"
anyhow = "1.0.56"
bytes = "1.1.0"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-session = { version = "0.6.1", features = ["cookie-session"] }
actix-identity = "0.4.0"
futures-util = "0.3.21"
futures = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }
urlencoding = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.2.0"

[build-dependencies]
vergen = { version = "7.0.0", default-features = false, features = ["build", "local_offset"] }
